--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,4 @@
-header{
-
-   
+header {
     text-align: center;
    
     font-family: sans-serif;
@@ -28,7 +26,7 @@ h2, h4 {
     
 }
 
-#global{
+#section, #article1, #article2, header, #footer {
     
     background-color: rgba(49, 46, 46, 0.527);
     padding: 10px;
@@ -40,7 +38,7 @@ h2, h4 {
 .espacio{
     padding: 20px;
 }
-p{
+p, h6{
     color: hotpink;
     text-align: justify;
     font-size: 20px;
