--- a/estilos.css
+++ b/estilos.css
@@ -3,9 +3,14 @@ header {
    
     font-family: sans-serif;
 }
-#fondo{
-    width: 100%;
+body{
+    background-image: url("imgs/fondo1.jpg");
+    background-repeat: no-repeat;    
+    background-attachment: fixed;
+    background-position: center center;
+
 }
+
 #logo{
     padding: 50px;
     width: 100%;
@@ -30,7 +35,7 @@ h2 {
 
 #section, #article1, #article2, header, #article3, #article4, #footer1, .footer2 {
     
-    background-color: rgba(49, 46, 46, 0.527);
+    background-color: rgba(62, 61, 63, 0.678);
     padding: 10px;
     width: 80%;
     margin: 0px auto;
@@ -44,23 +49,34 @@ p, h6, h4{
     font-size: 20px;
     text-indent: 20px;
     padding: 20px;
+    
 }
+
 
 table {
     width:100%;
     font:normal 16px Arial;
     text-align:center;
     border-collapse:collapse;
+ 
 }
+
 table th {
     font:bold 15px Arial;
     background-color:rgba(99, 109, 240, 0.548);
     color: rgb(61, 4, 99);
 }
-.fila{
-    background-color:rgba(175, 140, 231, 0.712);
+.fila1{
+    
+    background-color:rgba(220, 140, 231, 0.712);
     color: rgb(50, 3, 82);
 }
+.fila2{
+    background-color:rgba(175, 140, 231, 0.712);
+    color: rgb(50, 3, 82);
+
+}
+
 .lista{
     color: rgb(240, 109, 245);
     font-size: 20px;
@@ -74,3 +90,4 @@ table th {
     color: hotpink;
     text-align: center;
 }
+
